    * 0678 FIX: Move two last global settings of Event Console to proper places
    * 0268 FIX: wato inventory: fixed missing services...
    * 0686 FIX: Fix replication with WATO if EC is enabled on master and disabled on slave
    * 0129 FIX: Fixed permission bug in "Edit user profile" dialog....
    * 0269 FIX: brocade_fcport: fixed problem on displaying check_parameters in WATO...

    Notifications:
    * 0362 sms: now searching PATH for sendsms and smssend commands...
    * 0684 New notification variables NOTIFY_LASTSERVICEOK and NOTIFY_LASTHOSTUP...
    * 0108 FIX: Prevent service notification on host alerts...
    * 0058 FIX: Fix email notifications containing non-ASCII characters in some situtations...

    Reporting & Availability:
    * 0018 New option for displaying a legend for the colors used in the timeline...
    * 0338 FIX: Introduce time limit on availability queries...
    * 0681 FIX: Display correct year for availability range for last month in january

    Event Console:
    * 0301 Handling messages of special syslog format correctly...
    * 0388 Moved Event Console related settings to own settings page...
    * 0303 FIX: Old log entries were shown in event history first...
    * 0304 FIX: Escaping several unwanted chars from incoming log messages...
    * 0089 FIX: CSV export of event console was broken...
    * 0359 FIX: Fixed exception in event simulator when one match group did not match
    * 0384 FIX: Trying to prevent problem when restarting mkeventd...
    * 0427 FIX: Fixed exception when handling connections from event unix socket...
    * 0679 FIX: Allow non-Ascii characters in generated events
    * 0680 FIX: Do not allow spaces in host names in event simulator...

    Livestatus:
    * 0337 New header for limiting the execution time of a query...
    * 0335 FIX: Parse state of downtime notification log entries correctly...
    * 0336 FIX: Limit the number of lines read from a single logfile...